# RekoBuku

./: .env  .gitignore  .replit  app.py  application.py  main.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
app/: __init__.py
app/forms/: __init__.py  auth.py  book.py  user.py
app/models/: book.py  settings.py  user.py
app/services/: gemini_service.py
data/: books.json  settings.json  users.json
static/css/: style.css
static/js/: main.js
templates/: base.html  book_detail.html  home.html  jelajah.html  maintenance.html  profil.html
templates/admin/: ai_generate.html  base_admin.html  book_form.html  books.html  dashboard.html  nlp.html  settings.html  user_form.html  users.html
templates/auth/: login.html  register.html
