[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=23.0.0",
    "werkzeug>=3.1.3",
    "google-genai>=1.38.0",
    "python-dotenv>=1.1.1",
    "pillow>=11.3.0",
]
